%% Diagrama de clases — DISEÑO ANTES
%% Módulo: Pacientes — flujo: registro, búsqueda y actualización segura
%% Principio evaluado: LSP (Liskov Substitution Principle)
classDiagram
    class RepositorioPaciente {
        #PDO pdo
        +registrar(datos) int
        +buscarPorDocumento(documento) array|null
        +actualizar(id, datos) bool
    }

    class RepositorioPacienteExtranjero {
        +registrar(datos) int
        +actualizar(id, datos) bool
    }

    class RepositorioPacienteMenorEdad {
        +buscarPorDocumento(documento) array|null
    }

    RepositorioPaciente <|-- RepositorioPacienteExtranjero
    RepositorioPaciente <|-- RepositorioPacienteMenorEdad

    note for RepositorioPacienteExtranjero "VIOLA LSP:
1) registrar() exige 'pasaporte' (precondicion mas fuerte que el padre)
2) actualizar() imprime y retorna null en vez de bool (TypeError en cliente)"
    note for RepositorioPacienteMenorEdad "VIOLA LSP:
buscarPorDocumento() lanza excepcion cuando no encuentra el registro,
en vez de retornar null como garantiza el padre"
